Update dynamic loading

--- a/components/header.html
+++ b/components/header.html
@@ -7,6 +7,6 @@
         ||
         <a href="./contract.html">Contract</a>
         ||
-        <a href="./whimsical_site/index.html">Whimsical Site</a>
+        <a href="../whimsical_site/index.html">Whimsical Site</a>
     </nav>
 </header>
