--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <h6 id="copyright">by <a href="./itis3135/yhastydesign.com/index.html">Hasty Designs</a> ©2025, <i>
+    <h6 id="copyright">by <a href="../itis3135/yhastydesign.com/index.html">Hasty Designs</a> ©2025, <i>
         <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
         </i>
     </h6>
